--- a/RogueBlaze/Shared/NavMenu.razor
+++ b/RogueBlaze/Shared/NavMenu.razor
@@ -10,8 +10,13 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="game">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Game
+            <NavLink class="nav-link" href="outdoor">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Outdoor
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="indoor">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Indoor
             </NavLink>
         </div>
     </nav>
